# hns-dane-browser

./: .gitignore  CHANGELOG.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  ios-testflight.yml
android/: build.gradle.kts
android/app/: build.gradle.kts  gradle.lockfile  proguard-rules.pro
android/app/src/hnsrTest/: AndroidManifest.xml
android/app/src/hnsrTest/res/values/: strings.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: hns_directory.html  start.html  third_party_notices.txt
android/app/src/main/res/drawable/: ic_launcher_monochrome.xml
android/app/src/main/res/values-ar/: strings.xml
android/app/src/main/res/values-b+he/: strings.xml
android/app/src/main/res/values-b+id/: strings.xml
android/app/src/main/res/values-b+zh+Hans/: strings.xml
android/app/src/main/res/values-b+zh+Hant/: strings.xml
android/app/src/main/res/values-de/: strings.xml
android/app/src/main/res/values-es/: strings.xml
android/app/src/main/res/values-fa/: strings.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/main/res/values-hi/: strings.xml
android/gradle/: libs.versions.toml  verification-metadata.xml
docs/: architecture.md  branding-audit.md  experimental-hns-p2p-dns-relay.md  experimental-hns-p2p-odoh.md  experimental-hnsr-native-runbook.md  experimental-p2p-dns-relay-runbook.md  hns-authoritative-doh-crewball-test.md  ios-app-store-release.md  ios-app-store-screenshots.md  ios-device-validation.md  milestones.md  plan.md  play-store-readiness.md  privacy-policy.md  production-readiness-audit.md  reference-links.md  security-model.md  supply-chain-audit.md  sync-audit.md  version-audit.md
ios/: project.yml
ios/HnsDaneBrowser.xcodeproj/: project.pbxproj
ios/HnsDaneBrowser/App/: BrowserProcess.swift  SceneDelegate.swift
ios/HnsDaneBrowser/Core/: BrowserModels.swift  BrowserProxyCoordinator.swift  BrowserRuntimePolicyStore.swift  RustBrowserRuntime.swift
ios/HnsDaneBrowser/Support/: Info.plist
ios/HnsDaneBrowser/UI/: BrowserSettingsViewController.swift  BrowserViewController.swift
ios/HnsDaneBrowserScreenshotTests/: AppStoreScreenshotTests.swift
ios/HnsDaneBrowserTests/: BrowserAuthenticationPolicyTests.swift  BrowserRuntimeControlTests.swift
rust/: Cargo.toml  deny.toml
rust/crates/android-ffi/: Cargo.toml
rust/crates/android-ffi/src/: lib.rs
rust/crates/hns-browser-runtime/: Cargo.toml
rust/crates/hns-browser-runtime/src/: lib.rs
rust/crates/hns-cache/src/: lib.rs
rust/crates/hns-chain/src/: lib.rs
rust/crates/hns-core/src/: header.rs  lib.rs  network.rs  network_policy.rs
rust/crates/hns-dane/src/: lib.rs
rust/crates/hns-dnssec/: Cargo.toml
rust/crates/hns-dnssec/src/: lib.rs
rust/crates/hns-gateway/: Cargo.toml
rust/crates/hns-gateway/src/: lib.rs
rust/crates/hns-loopback-proxy/: Cargo.toml
rust/crates/hns-loopback-proxy/src/: backend.rs  config.rs  event.rs  host.rs  http1.rs  lib.rs  listener.rs  response.rs  server.rs
rust/crates/hns-p2p/: Cargo.toml
rust/crates/hns-p2p/src/: dns_relay.rs  hnsr.rs  lib.rs  odoh.rs
rust/crates/hns-resolver/src/: lib.rs
rust/crates/hns-sync/src/: lib.rs
rust/crates/hns-transport/: Cargo.toml
rust/crates/hns-transport/src/: lib.rs
rust/crates/ios-ffi/include/: hns_browser.h
rust/crates/ios-ffi/src/: lib.rs
rust/fuzz/: Cargo.toml
scripts/: build-ios.sh  build-rust-android.sh  build-rust-ios.sh  build-rust.sh  check-ios-abi.sh  check-runtime-boundaries.sh  check-version-consistency.sh  check.sh  ci-changed-targets.sh  fuzz-smoke.sh  generate-ios-app-store-screenshots.sh  generate-third-party-notices.py  ios_screenshot_tools.py  play-upload-closed-testing.sh  run-ios-gate.sh  test-experimental-p2p-dns-relay-full.sh  third-party-notices.sha256  verify-supply-chain.sh  with-local-signing.sh
tests/: test_ci_changed_targets.py  test_ios_screenshot_tools.py
tests/experimental-dns-relay/: full-compose.yaml  full-hsd-entrypoint.py
tools/hns-header-snapshot-exporter/: Cargo.toml
tools/hns-header-snapshot-exporter/src/: main.rs
(+150 files in other folders)
