[package]
name = "hns-dnssec"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hns-core.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
p256.workspace = true
ring.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
