[package]
name = "hns-loopback-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
hns-resolver.workspace = true
httparse.workspace = true
idna.workspace = true
ring.workspace = true
subtle.workspace = true
thiserror.workspace = true
