[package]
name = "hns-p2p"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm.workspace = true
getrandom.workspace = true
hkdf.workspace = true
hns-core.workspace = true
hpke.workspace = true
hns-urkel.workspace = true
k256.workspace = true
rusqlite.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
